--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ header{
 
 main{
     display: flex;
+    /* flex: 1 3; */
     padding: 1.5rem;
    
 }
@@ -62,7 +63,7 @@ main{
     display: flex ;
     flex-direction:column;
     justify-content: space-between;
-    width: 100%;
+    width: 30%;
     height: auto;
     margin-right: 1.5rem;
     
@@ -180,9 +181,83 @@ main{
     color: white;
     border: 1px solid white;
 }
-/*! section-main */
+/*! card */
+/* background-img */
+.section-card{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1.5rem;
+}
+.card-img{
+    width: 30%;
+    height: 40vh;
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+    
+}
+.card--background-img1{
+    background-image: url(../img/card-1.jpg);
+    background-size:cover; 
+    background-position: center;   
+}
+.card--background-img2{
+    background-image: url(../img/card-2.jpg);
+    background-size: cover;
+}
+.card--background-img3{
+    background-image: url(../img/card-3.jpg);
+    background-size: cover;
+}
+.card--background-img4{
+    background-image: url(../img/card-4.jpg);
+    background-size: cover;
+}
+.card--background-img5{
+    background-image: url(../img/card-5.jpg);
+    background-size: cover;
+}
+.card--background-img6{
+    background-image: url(../img/card-6.jpg);
+    background-size: cover;
+}
+/* h2-dans img */
+.h2-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    font-size: 0.5rem;
+    text-shadow:2px 2px 4px black ;
+}
+.h2-card strong{
+    font-size: 1.5rem;
 
-
+}
+/* image du bas */
 .section-main img{
     width: 100%;
+}
+/* ! text in main */
+
+.section-main-p{
+    font-size: 0.8rem;
+    padding-top: 1rem ;
+}
+
+.section-main-p2{
+    padding-bottom: 1rem;
+}
+/* !version mobil */
+
+@media screen and (max-width:767px) {
+    main{
+        flex-direction: column;
+    }
+    .menu{
+        flex-direction: row;
+    }
+    
 }
